Fix missing scrollbar

--- a/light.css
+++ b/light.css
@@ -408,10 +408,6 @@ nav ul li.brand {
     font-weight: 500;
 }
 
-::-webkit-scrollbar {
-    display: none;
-}
-
 .nav-container {
     width: 85%;
     margin: 0 auto;
@@ -419,6 +415,10 @@ nav ul li.brand {
     overflow-y: auto;
     overflow-x: scroll;
     position: relative;
+}
+
+.nav-container::-webkit-scrollbar {
+    display: none;
 }
 
 @media (max-width: 650px) {
